[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_sap"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]
dynamic = ["version", "description"]
dependencies = [
    "comtypes==1.2.0",
    "forallpeople==2.6.7",
    "pandas==2.1.3",
    "rich==13.7.0",
    "typer[all]==0.9.0"
]

[project.optional-dependencies]

dev = [
    "ipykernel",
    "ipywidgets",
    "pandasgui",
    "line-profiler",
    "pytest==7.4.3"
]

gui = [
    "streamlit==1.31.0",
    "hilti_profis==0.0.3"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_sap"

[project.scripts]
app="ak_sap.gui.cli_app:app"