[project]
name = "ak_sap"
version = "0.0.1"
requires-python = ">=3.12.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]
dependencies = [
    "comtypes>=1.4.8",
    "forallpeople>=2.7.1",
    "pandas>=2.1.3",
    "pywin32>=308",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.40.1",
    "hilti_profis>=0.0.3"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_sap"

[project.scripts]
gui="ak_sap.gui.gui_app:app"
update-doc="ak_sap.cli.update_doc:app"

[tool.uv]
default-groups = ["gui"]
package = true

[tool.setuptools.dynamic]
description = {file = "README.md"}

[dependency-groups]
cli = [
    "rich>=13.7.0",
    "typer>=0.9.0",
]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "line-profiler>=4.2.0",
    "pdoc>=15.0.1",
    "ruff>=0.9.1",
]
gui = [
    "streamlit>=1.40.1",
    "hilti_profis>=0.0.3",
    "typer>=0.9.0",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=7.4.3",
]
